# Y86_Simulator

./: CMakeLists.txt  CPU阶段分解.xlsx  README.md
answer/json/: asumi.json
include/: defs.h  y86_CPU.h  y86_logger.h  y86_memory.h  y86_utils.h
src/: main.cpp  y86_CPU.cpp  y86_logger.cpp  y86_memory.cpp  y86_utils.cpp
